@@ -28,10 +28,7 @@
       , {q_tut, hello_blob, 1} => #{
             role => public
         }
-      , {q_vvx_engine, super_simple_tts, 1} => #{
-            role => public
-        }
-      , {q_vvx_core, super_simple_tts, 1} => #{
+      , {q_vvx_core, synthesize, 1} => #{
             role => public
         }
       , {qrpc_event, fetch, 1} => #{
@@ -105,12 +102,7 @@
             }
         }
       , q_vvx => #{
-            q_vvx_engine => #{
-                workers => [
-                    {voicevox_http_engine, <<"http://127.0.0.1:50021">>}
-                ]
-            }
-          , q_vvx_worker_sup => #{
+            q_vvx_worker_sup => #{
                 worker_count => 2
             }
           , q_vvx_core => #{
